# gimage

./: Curve.cpp  Curve.h  Makefile  Makefile.in  README.md  configure  configure.ac  curve.cpp  curve.h  exif.cpp  gimage.cpp  gimage.h  gimg.cpp  jpegexif.cpp  jpegexif.h  jpegimage.c  jpegimage.cpp  jpegimage.h  nef2jpg.c  nef2jpg.cpp  rawimage.cpp  rawimage.h  strutil.cpp  strutil.h  tiffimage.c  tiffimage.cpp  tiffimage.h
gimage/: curve.h  gimage.h
